# dynamic-slam

./: .gitignore  README.md  check_imu.py  final_check.py  frames_2026-02-10_23.56.58.gv  frames_2026-02-11_00.02.22.gv  frames_2026-02-12_21.09.00.gv
src/dynamic_filter_pkg/: package.xml  setup.cfg  setup.py
src/dynamic_filter_pkg/dynamic_filter_pkg/: box_patrol_node.py  kalman_tracker.py  motion_detector.py  object_tracker.py  semantic_filter_node.py
src/dynamic_rtabmap_sim/: CMakeLists.txt  package.xml
src/dynamic_rtabmap_sim/launch/: mapping.launch.py  simulation.launch.py
src/dynamic_rtabmap_sim/maps/: Yolo_2d.pgm  Yolo_2d.yaml  baseline_2d.yaml  baseline_2d_failed.pgm  baseline_2d_failed.yaml  yolo_v10_map.pgm  yolo_v10_map.yaml  yolo_v2_map.pgm  yolo_v2_map.yaml  yolo_v3_map.pgm  yolo_v3_map.yaml  yolo_v4_map.pgm  yolo_v4_map.yaml  yolo_v5_map.pgm  yolo_v5_map.yaml  yolo_v6_map.pgm  yolo_v6_map.yaml  yolo_v8_map.pgm  yolo_v8_map.yaml  yolo_v9_map.pgm  yolo_v9_map.yaml
src/dynamic_rtabmap_sim/models/: model_box.sdf
src/dynamic_rtabmap_sim/rviz/: slam.rviz
src/dynamic_rtabmap_sim/urdf/: robot.xacro
src/dynamic_rtabmap_sim/worlds/: loop_corridor.world
